[package]
name = "pinocchio-associated-token"
description = "Pinocchio helpers to invoke Associated Token program instructions"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "./README.md"
repository = "https://github.com/febo/pinocchio"

[dependencies]
pinocchio = "0.6"
pinocchio-pubkey = "0.2.1"
